--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,5 @@
 	<string name="sml">Small</string>
 	<string name="med">Medium</string>
 	<string name="lrg">Large</string>
-
+	<string name="level_finished">Level finished!</string>
 </resources>
